<resources>
    <string name="app_name">My Social App</string>
    <string name="btnLogin">Login</string>
    <string name="lblNotAMember">Not a member?</string>
    <string name="lblSignUp">Sign Up</string>
    <string name="btnSignInWithGoogle">Sign in With Google</string>
    <string name="lblSignUp_sua">Hi, New User!</string>
    <string name="btnSignUp_sua">Sign Up!</string>
    <string name="lblPosts">Posts</string>
    <string name="lblFriends">Friends</string>
    <string name="tabItemFriends">Friends</string>
    <string name="tabItemAddNewFriend">Add New Friend</string>
    <string name="lblRequestsPending">Requests Pending</string>
</resources>
