<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.group08.mysocialapp.ManageFriendsActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblFriends_mfa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblFriends"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText,InefficientWeight" />

            <ImageButton
                android:id="@+id/imgBtnHome_mfa"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="?android:attr/colorBackground"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/home"
                tools:ignore="ContentDescription" />

        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <android.support.design.widget.TabLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTabBlue"
        app:tabIndicatorColor="@android:color/white">

        <android.support.design.widget.TabItem
            android:id="@+id/tabItemFriends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabItemFriends" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabItemAddNewFriend" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblRequestsPending" />
    </android.support.design.widget.TabLayout>

</LinearLayout>
